test/functions/whereClauses/whereClauseNonParam.good
whereClauseNonParam.chpl:1: In function 'foo':
whereClauseNonParam.chpl:1: error: a 'where' clause expression must be a 'param', but got a non-'param'
